# pc-control

./: .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  ANDROID_BUILD_ANALYSIS.md  ANDROID_BUILD_NOTES.md  BUILD_REPORT.md  CLAUDE.md  COMBINED_PRS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  REFINED_ACTION_PLAN.md  TODO_FIX_SUMMARY.md  Z.ai.ps1  code-review.txt  debug_schema.py  pc_agent.db  unified-voice-assistant-prompt.md
.github/: copilot-instructions.md
.serena/: project.yml
.specify/memory/: constitution.md
android/: .editorconfig  GEMINI.md  build.gradle.kts  compile_errors.txt  detekt.yml  gradle.properties  local.properties  remaining_errors.txt  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/pccontrol/voice/: ExampleInstrumentedTest.kt
android/app/src/androidTest/java/com/pccontrol/voice/integration/: AudioStreamingTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: config.properties
android/app/src/main/cpp/: CMakeLists.txt  whisper.h  whisper_dummy.c  whisper_jni.cpp
android/app/src/main/java/com/pccontrol/voice/: MainActivity.kt  PCVoiceAssistantApplication.kt
android/app/src/main/java/com/pccontrol/voice/audio/: AudioProcessingService.kt  AudioRecorder.kt  SpeechToTextService.kt
android/app/src/main/java/com/pccontrol/voice/common/: ServiceState.kt
android/app/src/main/java/com/pccontrol/voice/data/database/: ActionEntity.kt  AppDatabase.kt  AppSettingsDao.kt  AppSettingsEntity.kt  CommandHistoryDao.kt  Converters.kt  DevicePairingDao.kt  DevicePairingEntity.kt  Entities.kt  OfflineCommandDao.kt  OfflineCommandEntity.kt  PCConnectionDao.kt  VoiceCommandEntity.kt
android/app/src/main/java/com/pccontrol/voice/data/models/: Action.kt  DevicePairing.kt  PCConnection.kt  VoiceCommand.kt
android/app/src/main/java/com/pccontrol/voice/data/repository/: PairingRepository.kt  TileStateRepository.kt  VoiceCommandRepository.kt
android/app/src/main/java/com/pccontrol/voice/di/: AppModule.kt
android/app/src/main/java/com/pccontrol/voice/domain/services/: AudioCaptureService.kt  BrowserActionHandler.kt  VoiceAssistantService.kt  VoiceAssistantServiceManager.kt
android/app/src/main/java/com/pccontrol/voice/network/: AudioStreamer.kt  PCDiscovery.kt  WebSocketClient.kt
android/app/src/main/java/com/pccontrol/voice/presentation/: QuickSettingsTileService.kt
android/app/src/main/java/com/pccontrol/voice/presentation/navigation/: PCVoiceNavigation.kt
android/app/src/main/java/com/pccontrol/voice/presentation/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/pccontrol/voice/security/: CertificateValidator.kt  CredentialCleanupService.kt  KeyStoreManager.kt  SecureConnectionHelper.kt
android/app/src/main/java/com/pccontrol/voice/services/: BatteryMonitor.kt  BatteryOptimizationService.kt  ConnectionQueueModels.kt  ConnectionQueueService.kt  WebSocketManager.kt
android/app/src/main/java/com/pccontrol/voice/workers/: DatabaseCleanupWorker.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_mic.xml  quick_settings_guide.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-tr/: strings.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml  network_security_config.xml
android/app/src/test/java/com/pccontrol/voice/: ConfigTest.kt
android/app/src/test/resources/: test-config.properties
android/tests/integration/: test_audio_streaming.kt  test_battery_usage.py
android/tests/unit/: SampleTest.kt  VoiceCommandViewModelTest.kt  test_certificate_generation.py  test_certificate_pinning.py
docs/: BUILD_REPORT.md  DOCUMENTATION_COVERAGE_REPORT.md  TEST_COVERAGE_REPORT.md  UI_LAYER_FIX_SUMMARY.md  comment-action-plan.md  performance.md  troubleshooting.md
docs/api/: README.md  REST-API.md  WEBSOCKET-API.md
pc-agent/: .env.template  README.md  fix_imports.py  pc_agent.db  pyproject.toml  requirements-dev.txt  requirements.txt  test_browser_control.py  test_system_operations.py  test_wol_simple.py
pc-agent/config/: logging.yaml
pc-agent/src/: __init__.py  main.py
pc-agent/src/api/: __init__.py  dependencies.py  error_handlers.py  main.py  middleware.py  rest_endpoints.py  websocket_server.py
pc-agent/src/api/endpoints/: browser.py  pairing.py  system.py
pc-agent/src/config/: __init__.py  settings.py
pc-agent/src/database/: __init__.py  connection.py  schema.py  schema.sql
pc-agent/src/mcp_tools/: chrome_devtools.py  tools.py
pc-agent/src/models/: __init__.py  action.py  command_history.py  device_pairing.py  message.py  pc_connection.py  voice_command.py
pc-agent/src/services/: __init__.py  audio_processor.py  audit_log_service.py  audit_logger.py  browser_control.py  certificate_service.py  command_history_service.py  command_interpreter.py  connection_manager.py  credential_cleanup.py  network_monitor.py  page_extractor.py  pairing_service.py  pairing_validator.py  performance_monitor.py  stt_service.py  system_control.py  system_controller.py  voice_command_processor.py  wol_service.py
pc-agent/src/utils/: __init__.py  certificate_generator.py
pc-agent/tests/: __init__.py  conftest.py  test_voice_command_processor.py
pc-agent/tests/contract/: test_browser_api.py  test_pairing_api.py  test_system_api.py  test_wol_api.py
pc-agent/tests/integration/: __init__.py  test_browser_control.py  test_file_operations.py  test_pairing_flow.py  test_voice_command.py
pc-agent/tests/unit/: __init__.py  test_audit_logger.py  test_config.py  test_rate_limiting.py
scripts/: start-pc-agent.bat  start-pc-agent.sh
specs/001-voice-pc-control/: critical-gaps-action-plan.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-voice-pc-control/checklists/: requirements.md
specs/001-voice-pc-control/contracts/: mcp-tools-schema.json  message-flow.md  rest-api.yaml  websocket-api.yaml  websocket-protocol.md
(+23 files in other folders)
